Dark mode font bug fixed.

--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@
   inline-size: 100%;
 
   font-family: Inter-Variable;
-  font-variation-settings: 'wght' 400, 'wdth' 100, 'opsz' 0;
+  font-variation-settings: var(--regularFont);
 
   background-color: var(--backgroundColor);
   background-image: var(--backgroundImage);
@@ -154,13 +154,16 @@
 .card__title {
   font-size: 18px;
   line-height: 121%;
-  font-variation-settings: 'wght' 700, 'wdth' 100, 'opsz' 0;
+  font-variation-settings: var(--accentFont);
 
   padding: 5px 10px 5px;
 }
 
 .card__image {
   display: block;
+
+  border-top: 2px solid var(--primaryColor);
+  border-bottom: 2px solid var(--primaryColor);
 
   width: 100%;
 }
@@ -170,7 +173,7 @@
   flex-direction: column;
   gap: 27px;
 
-  padding: 26px 25px;
+  padding: 25px 25px;
 }
 
 .card__text {
